--- a/styles/style.css
+++ b/styles/style.css
@@ -13,4 +13,346 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+
+  color: var(--accent-color, #000);
+  background-color: var(--bg-color, #FFF);
+
+  background-image: var(--bg-image);
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.header {
+  max-width: 700px;
+  margin-block: 100px;
+  margin-inline: auto;
+  height: clamp(20.438rem, 3.85vw + 19.535rem, 23rem);
+  background-color: var(--bg-color, #FFF);
+  border: var(--accent-color, #000) 2px solid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  font-family: var(--alternate-font, 'PressStart2P');
+  font-weight: var(--card-text-weight, 400);
+  font-size: 14px;
+
+  padding-block-start: clamp(7.5rem, 1.502vw + 7.148rem, 8.5rem);
+}
+
+.header__title {
+  font-size: clamp(3.063rem, 1.502vw + 2.71rem, 4.063rem);
+  line-height: 100%;
+  letter-spacing: 0%;
+  vertical-align: bottom;
+  text-transform: uppercase;
+  margin-block-end: 20px;
+}
+
+.header__title-add {
+  font-size: clamp(0.875rem, 0.845vw + 0.677rem, 1.438rem);
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-transform: uppercase;
+  margin-block-end: 25px;
+}
+
+.theme-menu__button {
+  position: relative;
+  border: none;
+  background-color: inherit;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button::after {
+  content: " ";
+  display: block;
+  background-color: var(--accent-color, #000);
+  block-size: 2px;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+  transform-origin: left;
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.header__theme-menu {
+  margin-block-end: 25px;
+}
+
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  inset-inline-start: -20px;
+  inset-block-start: 0px;
+  animation: moving_arrow 0.5s ease-in-out infinite alternate;
+}
+
+.theme-menu__item {
+  margin-block-end: 14px;
+}
+
+.theme-menu__item:last-child {
+  margin-block-end: 0;
+}
+
+.card {
+  max-width: 700px;
+  margin-block-end: 50px;
+  margin-inline: auto;
+  background-color: var(--bg-color, #FFF);
+  border: var(--accent-color, #000) 2px solid;
+  font-family: var(--main-font, 'Inter-Variable');
+  font-weight: var(--card-text-weight);
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0%;
+}
+
+.card__header-text {
+  font-size: 18px;
+  font-weight: var(--card-title-weight, 700);
+  line-height: 100%;
+  letter-spacing: 0%;
+  vertical-align: middle;
+  margin-inline-start: 10px;
+  margin-block: 3px;
+}
+
+.card__image-container {
+  position: relative;
+}
+
+.card__image {
+  width: 100%;
+  border-top: 2px solid var(--accent-color, #000);
+  border-bottom: 2px solid var(--accent-color, #000);
+}
+
+.filter__brightness {
+  filter: brightness(135%);
+}
+
+.filter__multimillioner {
+  filter: brightness(68%) saturate(0%) contrast(184%);
+}
+
+.filter__sepia {
+  filter: sepia(30%);
+}
+
+.filter__hue {
+  filter: hue-rotate(115deg);
+}
+
+.filter__saturate {
+  filter: saturate(300%);
+}
+
+.filter__gray {
+  filter: grayscale(50%);
+}
+
+.filter__blur {
+  filter: blur(20px);
+}
+
+.image-label {
+  font-family: var(--alternate-font, 'PressStart2P');
+  font-size: 14px;
+  font-weight: var(--card-text-weight, 400);
+  position: absolute;
+  inset-inline-end: clamp(0.813rem, 1.127vw + 0.548rem, 1.563rem);
+  inset-block-start: 25px;
+  text-shadow: 0 0 1px var(--bg-color, #FFF);
+  mix-blend-mode: hard-light;
+  opacity: 0.5;
+}
+
+@supports ((-webkit-text-stroke: 1px var(--bg-color, #fff))) {
+  .image-label {
+    text-shadow: none;
+    -webkit-text-stroke: 1px var(--bg-color, #fff);
+  }
+}
+
+.card__text {
+  margin: 25px;
+}
+
+.first-text {
+  margin-block-end: 27px;
+}
+
+.card__feedback {
+  margin-block-end: 25px;
+  margin-inline-end: 25px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 12px;  
+}
+
+.button {
+  background-color: transparent;
+  border: 0;
+  position: relative;
+  cursor: pointer;
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color, #000);
+  transform: scaleX(0);
+  transition: transform 0.5s ease-in-out;
+  transform-origin: left;
+}
+
+.button:hover::before {
+  transform: scaleX(1);
+}
+
+.button__text {
+  font-family: var(--alternate-font);
+  font-weight: var(--card-text-weight);
+  font-size: 14px;
+  line-height: 90%;
+  letter-spacing: 0%;
+  color: var(--text-color, #fff);
+  mix-blend-mode: difference;
+}
+
+.like-icon {
+  width: 100%;
+  height: 100%;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.card__icon-button {
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+  width: 39px;
+  height: 38px;
+  border: solid 2px transparent;
+  transition: border 0.3s ease;
+  cursor: pointer;
+}
+
+.card__icon:focus {
+  outline: none;
+}
+
+.card__icon:focus-visible {
+  border: solid 2px var(--accent-color, #000);
+}
+
+.card__like-button {
+  width: 130px;
+  height: 38px;
+  border: 2px solid var(--accent-color, #000);
+}
+
+.card__like-button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 0 var(--accent-color, #000);
+  transition: box-shadow 0.3s ease;
+}
+
+.footer {
+  width: 335px;
+  height: 55px;
+  margin-inline: auto;
+  margin-block-end: 100px;
+}
+
+.footer__button {
+  width: 100%;
+  height: 100%;
+  background-color: var(--bg-color);
+  border: 2px solid var(--accent-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer__image {
+  width: 21px;
+  height: 21px;
+  margin-inline-end: 8px;
+  margin-block-end: 2px;
+  color: var(--text-color);
+  mix-blend-mode: difference;
+}
+
+.dialog {
+  width: clamp(21.3125rem, 21.0484rem + 1.1268vw, 22.0625rem);
+  height: 191px;
+  font-family: var(--alternate-font, 'PressStart2P');
+  font-size: 14px;
+  font-weight: var(--card-text-weight, 400);
+  line-height: 150%;
+  text-transform: uppercase;
+  padding: 0;
+  background-color: var(--bg-color, #FFF);
+  color: var(--accent-color, #000);
+}
+
+.dialog[open] {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.dialog__content {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-inline: 30px;
+}
+
+.dialog__image {
+  width: 39px;
+  height: 39px;
+  flex-shrink: 0;
+}
+
+.dialog__button {
+  width: clamp(16.0625rem, 15.2702rem + 3.3803vw, 18.3125rem);
+  height: 38px;
+  background-color: transparent;
+  border: 2px solid var(--accent-color, #000);
+  cursor: pointer;
+}
+
+.dialog::backdrop {
+  opacity: 75%;
+  background: #000;
 }
