--- a/styles/themes.css
+++ b/styles/themes.css
@@ -6,3 +6,79 @@
 */
 
 
+.page.theme-light {
+  --accent-color: #000000;
+  --bg-color: #FFFFFF;
+  --text-color: #FFF;
+
+  --card-title-weight: 700;
+  --card-text-weight: 400;
+  
+  --bg-image: repeating-linear-gradient(
+    90deg,
+    #d3d3d3 0 2px,
+    transparent 2px 4px
+  ),
+  repeating-linear-gradient(
+    180deg,
+    #d3d3d3 0 2px,
+    transparent 2px 4px
+  ),
+  linear-gradient(
+    180deg,
+    #e7e7e7 0.01%,
+    #1a1a1a
+  );
+}
+
+@media (prefers-color-scheme: dark) {
+  :root.theme-dark {
+    --accent-color: #00CC14;
+    --bg-color: #000000;
+    --text-color: #00CC14;
+
+    --card-title-weight: 785;
+    --card-text-weight: 465;
+
+    --bg-image: repeating-linear-gradient(
+    90deg,
+    #000 0 2px,
+    transparent 2px 4px
+  ),
+  repeating-linear-gradient(
+    180deg,
+    #000 0 2px,
+    transparent 2px 4px
+  ),
+  linear-gradient(
+    180deg,
+    #007f0c,
+    #004306
+  );
+  }
+}
+
+.page.theme-dark {
+  --accent-color: #00CC14;
+  --bg-color: #000000;
+  --text-color: #00CC14;
+
+  --card-title-weight: 785;
+  --card-text-weight: 465;
+
+  --bg-image: repeating-linear-gradient(
+    90deg,
+    #000 0 2px,
+    transparent 2px 4px
+  ),
+  repeating-linear-gradient(
+    180deg,
+    #000 0 2px,
+    transparent 2px 4px
+  ),
+  linear-gradient(
+    180deg,
+    #007f0c,
+    #004306
+  );
+}
